# federated-composable-datastack

./: .gitignore  .pre-commit-config.yaml  LICENCE  _quarto.yml  federated-composable-datastack.html  federated-composable-datastack.qmd  federated-composable-datastack.tex  index.html  index.qmd  pyproject.toml
_extensions/quarto-ext/ieee/: _extension.yml  typst-template.typ
dockerfiles/: Dockerfile
docs/: index.html  layers.d2
docs/index_files/libs/bootstrap/: bootstrap-890c869dbf3a416b21999c83a8b37bb7.min.css  bootstrap-aff34888834c48f80133d7b3872558f2.min.css
federated-composable-datastack_files/libs/bootstrap/: bootstrap-364259216be27b2f6cb05ba9d6bbdad0.min.css
paper/: index.html  index.qmd  index.tex  layers.d2
paper/_extensions/quarto-ext/ieee/: _extension.yml
sections/: architecture.qmd
