[project]
name = "igluit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pyiceberg[duckdb,polars]>=0.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "ty>=0.0.0a8",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
 
[tool.pytest.ini_options]
pythonpaths = [".", "src"]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C90","ANN"]
lint.ignore = ["E203", "E501","ANN101","ANN204","ANN002", "ANN003"]
exclude = [
    ".git",
    "__pycache__",
    ".ipynb",
    "__init__.py",
    "tests/*",
    "*.ipynb"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["aioc"]
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = true
order-by-type = true
case-sensitive = false
